--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ header > nav > h3 {
     text-align: right;
 }
 
+
 main{
     box-shadow: 0px 0px 10px black;
     height: 300px;
@@ -33,3 +34,141 @@ main{
 main > h3{
     text-align: center;
 }
+.product-list1-section{
+    display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px;
+}
+/* Estilo para o título "Produtos" */
+.product-list1-section h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+  
+  /* Estilo para o filtro de preço */
+  .product-filter label {
+    font-weight: bold;
+  }
+  
+  .product-filter select {
+    margin-left: 8px;
+    padding: 4px;
+  }
+  
+  /* Estilo para os itens de produto */
+  .product-list1 {
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+  }
+  .product-list1 li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  
+  .product-list1 li img {
+    width: 100px;
+    height: 100px;
+    margin-right: 16px;
+  }
+  
+  .product-list1 li h3 {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+  
+  .product-list1 li p {
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 20px;
+    padding-top: 10px;
+  }
+  .product-list1 button {
+    background-color: #385af3;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 6px 15px;
+    font-size: 1.2em;
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+  /* List 2 */
+  .product-list2 {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+  }
+  .product-list2 li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    /* position: fixed; */
+    top: 10cm;
+    left: 10cm;
+    /* margin-left: 30%; */
+    
+    
+  }
+  
+  .product-list2 li img {
+    width: 100px;
+    height: 100px;
+    margin-right: 16px;
+    
+    
+  }
+  
+  .product-list2 li h3 {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+  
+  .product-list2 li p {
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 20px;
+    padding-top: 10px;
+  }
+  .product-list2 button {
+    background-color: #385af3;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 6px 15px;
+    font-size: 1.2em;
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+  
+  /* Estilo para o campo de frete */
+  .shipping-section label {
+    font-weight: bold;
+  }
+  
+  .shipping-section input {
+    margin-left: 8px;
+    padding: 4px;
+  }
+  
+  .shipping-section button {
+    margin-left: 8px;
+    padding: 4px 8px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .shipping-section p {
+    margin-top: 8px;
+    font-weight: bold;
+  }
+  
+  
