--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -1,39 +1,75 @@
+:root {
+  --cor0: #2C3E50;
+  --cor1: #FFF;
+  --cor2: #2980B9;
+  --cor3: #1B2631;
+  --cor4: #7F8C8D;
+  --cor5: #fffd82;
+}
+
+body{
+  background-color: var(--cor2);
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-bottom: 0%;
+  margin-top: 0%;
+}
 header > h1 {
-    text-align: center;
+  text-align: center;
+  background-color: var(--cor2);
+  min-height: 100px;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  margin-left: 0%;
+  margin-right: 0%;
+  border-radius: 0px 0px 0px 0px;
+}
+header > nav {
+  background-color: var(--cor5);
+  border-radius: 0px 0px 15px 15px;
+  padding-top: 10px;
+}
+header > nav > div > a {
+  background-color: var(--cor2);
+  color: black;
+  border-radius: 5px;
+  box-shadow: 0 0 10px var(--cor3);
+  cursor: pointer;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 2px;
+  padding-top: 2px;
+}
+a{
+  text-decoration: none;
 }
 
-header > nav > h3 {
-    text-align: center;
+#anuncio{
+  text-align: center;
+  height: 0px;
+  font-size: 1.3em;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#div_perfil{
+  text-align: left;
+  margin-left: 20px;
+  font-weight: bold;
+  height: 0px;
+  padding-bottom: 0px;
+}
+#div_login{
+  text-align: right;
+  margin-right: 20px;
+  height: 30px;
+  font-weight: bold;
+}
+#destaque{
+  margin-left: 90%;
+}
+#promocao{
+  
 }
 
-#nav1{
-    box-shadow: 0px 0px 10px black;
-    margin-bottom: 20px;
-}
-
-#div1{
-    height:0px;
-    text-align: left;
-}
-
-#div2{
-    height: 0px;
-    text-align: right;
-}
-
-
-main{
-    box-shadow: 0px 0px 10px black;
-    height: 300px;
-    width: 80%;
-    margin: auto;
-    border-radius: 10px;
-    margin-top: 70px;
-}
-
-main > h3{
-    text-align: center;
-}
 .product-list1-section{
     display: grid;
   grid-template-columns: repeat(5, 1fr);
