--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -30,6 +30,7 @@ header > nav {
   background-color: var(--cor5);
   border-radius: 0px 0px 15px 15px;
   padding-top: 10px;
+  margin-bottom: 50px;
 }
 header > nav > div > a {
   background-color: var(--cor2);
@@ -72,15 +73,24 @@ main{
   border-radius: 10px;
   height: 300px;
   width: 1400px;
+  margin-top: 0%;
+  margin-bottom: px;
 }
 main > h3{
   text-align: center;
+  white-space: nowrap;
 }
 main > p{
   text-align: center;
+  white-space: nowrap;
 }
 aside{
-  
+  text-align: center;
+  margin-left: 1500px;
+  background-color: white;
+  width: 250px ;
+  height: 700px;
+  border-radius: 0px 20px 20px 0px ;
 }
 
 
