--- a/trabalhos/CSS/login.css
+++ b/trabalhos/CSS/login.css
@@ -35,6 +35,14 @@ h1 {
     margin-bottom: 20px;
 }
 
+h2 {
+    color:var(--cor4    );
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-shadow: 2px 2px var(--cor3);
+}
+
 header h1 {
     margin-top: 50px;
     text-align: center;
