--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -1,201 +1,242 @@
-/* Palheta de cores -Início */
-:root {
-  --cor0: #2C3E50;
-  --cor1: #FFF;
-  --cor2: #2980B9;
-  --cor3: #385af3;
-  --cor4: #1B2631;
-  --cor5: #7F8C8D;
-  --cor6: #fffd82;
-}
-/* Palheta de cores -Fim */
-
-body{
-  background-color: var(--cor0);
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0%;
-  margin-top: 0%;
-}
-
-/* CSS do cabeçalho -Início */
-header > h1 {
-  text-align: center;
-  color: var(--cor1);
-  background-image: linear-gradient(to bottom, var(--cor0), var(--cor1));
-  min-height: 100px;
-  margin-top: 0%;
-  margin-bottom: 0%;
-  margin-left: 0%;
-  margin-right: 0%;
-  border-radius: 0px 0px 0px 0px;
-}
-header > nav {
-  background-color: var(--cor1);
-  border-radius: 0px 0px 15px 15px;
-  padding-top: 10px;
-  margin-bottom: 50px;
-}
-header > nav > span > a {
-  background-color: var(--cor3);
-  color: black;
-  border-radius: 5px;
-  box-shadow: 0 0 10px var(--cor4);
-  cursor: pointer;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 3px;
-  padding-top: 5px;
-}
-a{
-  text-decoration: none;
-}
-/* IDS relacionadas ao cabeçalho - Fim*/
-.anuncio{
-  text-align: center;
-  height: 0px;
-  font-size: 1.4em;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 0%;
-  font-weight: 500;
-  margin-left: 350px;
-}
-.perfil{
-  text-align: left;
-  margin-left: 20px;
-  font-weight: bold;
-  height: 0px;
-  padding-bottom: 0px;
-}
-.login{
-  text-align: right;
-  margin-left:300px;
-  height: 30px;
-  font-weight: bold;
-}
-
-
-/* IDS relacionadas ao cabeçalho - Fim*/
-/* CSS cabeçalho -Fim */
-
-/* CSS containers - Início*/
-main  {
-  background-color: white;
-  margin-left:400px;
-  border-radius: 10px;
-  
-  height: 300px;
-  width: 1000px;
-}
-main > div >h2{
-  text-align: center;
-}
-main > h3{
-  text-align: center;
-  white-space: nowrap;
-}
-main > p{
-  text-align: center;
-  white-space: nowrap;
-}
-
-
-/* CSS containers - Início*/
-
-/* Estilo para o filtro de preço */
-.product-filter label {
-  font-weight: bold;
-  color:var(--cor1)
-}
-.product-list-section{
-  text-align: center;
-}
-
-
-.product-grid {
-  display: grid;
-  margin-right: 70px;
-  margin-right: auto;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
-}
-
-.product-grid-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  margin-right: 5px;
-  margin-left: 5px;
-  margin-bottom: 20px;
-}
-
-.product-grid-item > img {
-  width: 100%;
-  max-height: 100%;
-  height: auto;
-  margin-bottom: 5px;
-  padding-bottom: 30px;
-}
-
-.product-grid-item > h3 {
-  margin: 0;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.product-grid-item > p {
-  margin: 10px 0;
-  font-size: 1.1rem;
-  font-weight: bold;
-}
-
-.product-grid-item > button {
-  background-color: var(--cor3);
-  color: var(--cor1);
-  border: none;
-  border-radius: 20px;
-  padding: 10px 20px;
-  font-size: 1.1rem;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  
-}
-
-.product-grid-item button:hover {
-  background-color: var(--cor2);
-  color: #1c1c1c;
-  border: 2px solid #1c1c1c;
-}
-  
-  /* Estilo para o campo de frete */
-  .shipping-section label {
-    font-weight: bold;
+  /* Palheta de cores -Início */
+  :root {
+    --cor0: #2C3E50;
+    --cor1: #FFF;
+    --cor2: #2980B9;
+    --cor3: #385af3;
+    --cor4: #1B2631;
+    --cor5: #7F8C8D;
+    --cor6: #fffd82;
+    --cor7: #386c8357; 
+    --cor8: #e7eced;
   }
-  
-  .shipping-section input {
-    margin-left: 8px;
-    padding: 4px;
+  /* Palheta de cores -Fim */
+
+  body{
+    background-color: var(--cor7);
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0%;
+    margin-top: 0%;
   }
-  
-  .shipping-section button {
-    margin-left: 8px;
-    padding: 4px 8px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+
+  /* CSS do cabeçalho -Início */
+  header > h1 {
+    text-align: center;
+    color: var(--cor1);
+    min-height: 100px;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+    border-radius: 0px 0px 0px 0px;
+  }
+  header > nav {
+    background-color: var(--cor8);
+    border-radius: 0px 0px 15px 15px;
+    padding-top: 10px;
+    margin-bottom: 50px;
+  }
+  header > nav > span > a {
+    background-color: #094fe64c;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px var(--cor4);
     cursor: pointer;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 3px;
+    padding-top: 5px;
   }
-  
-  .shipping-section p {
-    margin-top: 8px;
+  a{
+    text-decoration: none;
+  }
+  /* IDS relacionadas ao cabeçalho - Fim*/
+  .anuncio{
+    text-align: center;
+    height: 0px;
+    font-size: 1.4em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 0%;
+    font-weight: 500;
+    margin-left: 350px;
+  }
+  .perfil{
+    text-align: left;
+    margin-left: 20px;
+    font-weight: bold;
+    height: 0px;
+    padding-bottom: 0px;
+  }
+  .login{
+    text-align: right;
+    margin-left:300px;
+    height: 30px;
     font-weight: bold;
   }
-  
-  
+
+
+  /* IDS relacionadas ao cabeçalho - Fim*/
+  /* CSS cabeçalho -Fim */
+
+  /* CSS containers - Início*/
+  main  {
+    background-color: white;
+    margin-left:400px;
+    border-radius: 10px;
+    
+    height: 300px;
+    width: 1000px;
+  }
+  main > div >h2{
+    text-align: center;
+  }
+  main > h3{
+    text-align: center;
+    white-space: nowrap;
+  }
+  main > p{
+    text-align: center;
+    white-space: nowrap;
+  }
+  #promotionlist {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .product {
+    width: 30%;
+    text-align: center;
+    margin: 0 10px;
+  }
+
+  .product img {
+    max-width: 100%;
+  }
+
+  .product .name {
+    font-weight: bold;
+    margin-top: 10px;
+  }
+
+  .product .price {
+    color:var(--cor0);
+    font-size: 1.2rem;
+    margin-top: 5px;
+  }
+
+
+  /* CSS containers - Início*/
+  .carrinho {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-top: 20px solid white;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+  }
+
+
+
+  /* Estilo para o filtro de preço */
+  .product-filter label {
+    font-weight: bold;
+    color:var(--cor1)
+  }
+  .product-list-section{
+    text-align: center;
+  }
+
+
+  .product-grid {
+    display: grid;
+    margin-right: 70px;
+    margin-right: auto;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+  }
+
+  .product-grid-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 20px;
+  }
+
+  .product-grid-item > img {
+    width: 100%;
+    max-height: 100%;
+    height: auto;
+    margin-bottom: 5px;
+    padding-bottom: 30px;
+  }
+
+  .product-grid-item > h3 {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .product-grid-item > p {
+    margin: 10px 0;
+    font-size: 1.1rem;
+    font-weight: bold;
+  }
+
+  .product-grid-item > button {
+    background-color: var(--cor3);
+    color: var(--cor8);
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    
+  }
+
+  .product-grid-item button:hover {
+    background-color: var(--cor2);
+    color: #1c1c1c;
+    border: 2px solid #1c1c1c;
+  }
+    
+    /* Estilo para o campo de frete */
+    .shipping-section label {
+      font-weight: bold;
+    }
+    
+    .shipping-section input {
+      margin-left: 8px;
+      padding: 4px;
+    }
+    
+    .shipping-section button {
+      margin-left: 8px;
+      padding: 4px 8px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    
+    .shipping-section p {
+      margin-top: 8px;
+      font-weight: bold;
+    }
+    
+    
