--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -1,5 +1,4 @@
 /* Palheta de cores -Início */
-/* Palheta de cores - Início */
 :root {
   --cor0: #2C3E50;
   --cor1: #FFF;
@@ -12,6 +11,7 @@
   --cor8: #e7eced;
 }
 /* Palheta de cores - Fim */
+/* ------------------------------------------------------------------------ */
 
 body {
   background-color: var(--cor7);
@@ -26,14 +26,12 @@ header > h1 {
   margin: 0;
   border-radius: 0;
 }
-
 header > nav {
   background-color: var(--cor8);
   border-radius: 0 0 15px 15px;
   padding-top: 10px;
   margin-bottom: 50px;
 }
-
 header > nav > span > a {
   
   background-color: #094fe64c;
@@ -43,11 +41,9 @@ header > nav > span > a {
   cursor: pointer;
   padding: 5px 10px;
 }
-
 a {
   text-decoration: none;
 }
-
 .anuncio {
   text-align: center;
   height: 0;
@@ -57,7 +53,6 @@ a {
   font-weight: 500;
   margin-left: 0;
 }
-
 .perfil {
   text-align: left;
   margin-left: 20px;
@@ -65,15 +60,14 @@ a {
   height: 0;
   padding-bottom: 0;
 }
-
 .login {
   text-align: right;
   margin-left: 0;
   height: 30px;
   font-weight: bold;
 }
-
 /* CSS cabeçalho - Fim */
+/* ------------------------------------------------------------------- */
 
 /* CSS containers - Início */
 main {
@@ -84,15 +78,12 @@ main {
   max-width: 1000px;
   padding: 20px;
 }
-
 .promotionlist h3 {
   text-align: center;
 }
-
 .promotionlist p {
   text-align: center;
 }
-
 .promotionlist {
   text-align: center;
   background-color: white;
@@ -102,6 +93,8 @@ main {
   gap: 20px;
   margin: 0 auto;
 }
+/* -------------- */
+/* Inicio Slider */
 .products {
   margin: 0 auto;
   width: 1000px;
@@ -133,7 +126,6 @@ main {
 #mouse{
   height: 600px;
 }
-
 .manual-navigation{
   position: absolute;
   width: 1000px;
@@ -180,7 +172,6 @@ main {
 .navigation_auto > div:not(:last-child){
   margin-right: 20px;
 }
-
 #radio1:checked ~ .navigation_auto .auto_btn1{
   background-color: var(--cor1);
 }
@@ -190,38 +181,36 @@ main {
 #radio3:checked ~ .navigation_auto .auto_btn3{
   background-color: var(--cor1);
 }
-
 .product .name {
   font-weight: bold;
   margin-top: 10px;
 }
-
 .product .price {
   color: var(--cor0);
   font-size: 1.2rem;
   margin-top: 5px;
 }
-
+/* Fim Slider */
+/* ----------- */
 /* CSS containers - Fim */
+/* ------------------------------------------------------------------------- */
+
 
 /* Estilo para o filtro de preço */
 .product-filter label {
   font-weight: bold;
   color: var(--cor1);
 }
-
 .product-list-section {
   padding-top: 100px;
   text-align: center;
 }
-
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px;
   margin: 0 auto;
 }
-  
 .product-grid-item {
   display: flex;
   flex-direction: column;
@@ -233,7 +222,6 @@ main {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   margin: 5px 5px 20px;
 }
-  
 .product-grid-item > img {
   width: 100%;
   max-height: 100%;
@@ -241,21 +229,18 @@ main {
   margin-bottom: 5px;
   padding-bottom: 30px;
 }
-  
 .product-grid-item > h3 {
   margin: 0;
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
 }
-  
-  .product-grid-item > p {
+.product-grid-item > p {
   margin: 10px 0;
   font-size: 1.1rem;
   font-weight: bold;
-  }
-  
-  .product-grid-item > button {
+}
+.product-grid-item > button {
   background-color: var(--cor3);
   color: var(--cor8);
   border: none;
@@ -264,25 +249,23 @@ main {
   font-size: 1.1rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  }
-  
-  .product-grid-item button:hover {
+}
+.product-grid-item button:hover {
   background-color: var(--cor2);
   color: #1c1c1c;
   border: 2px solid #1c1c1c;
-  }
-  
-  /* Estilo para o campo de frete */
-  .shipping-section label {
+}
+/* ------------------------------------------------------------------------------ */
+
+/* Estilo para o campo de frete */
+.shipping-section label {
   font-weight: bold;
-  }
-  
-  .shipping-section input {
+}
+.shipping-section input {
   margin-left: 8px;
   padding: 4px;
-  }
-  
-  .shipping-section button {
+}
+.shipping-section button {
   margin-left: 8px;
   padding: 4px 8px;
   background-color: #007bff;
@@ -290,14 +273,14 @@ main {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  }
-  
+}
 .shipping-section p {
   margin-top: 8px;
   font-weight: bold;
 }
-  
-  /* Media queries */
+/* ------------------------------------------------------------------------------ */
+
+/* Media queries */
 @media screen and (max-width: 800px) {
   .anuncio {
   margin-left: 20px;
