--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -14,58 +14,56 @@
 /* ------------------------------------------------------------------------ */
 
 body {
-  background-color: var(--cor7);
-  margin: 0;
+background-color: var(--cor8);
+  margin: 0 10px 0 10px;
+  box-shadow: 1px 1px 4px black;
 }
 
 /* CSS do cabeçalho - Início */
-header > h1 {
-  text-align: center;
-  color: var(--cor1);
-  min-height: 100px;
+.header{
   margin: 0;
-  border-radius: 0;
+  padding: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--cor7);
+  color: var(--cor1);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: 1px 1px 1px black;
+  height: 3.5em;
+  justify-content: space-between;
+  padding: 0 10%;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-header > nav {
-  background-color: var(--cor8);
-  border-radius: 0 0 15px 15px;
-  padding-top: 10px;
-  margin-bottom: 50px;
+.navigation_header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3em;
 }
-header > nav > span > a {
-  
-  background-color: #094fe64c;
-  color: black;
-  border-radius: 5px;
-  box-shadow: 0 0 10px var(--cor4);
-  cursor: pointer;
-  padding: 5px 10px;
-}
-a {
+.navigation_header > a{
   text-decoration: none;
+  color: var(--cor4);
+  transition: 1s;
+  font-weight: bold;
 }
-.anuncio {
+.logo_header > img{
+  width: 60px;
+}
+.active{
+  padding: 10px;
+  border-radius: 10px;
+}
+.content{
+  background-color: var(--cor8);
   text-align: center;
-  height: 0;
-  font-size: 1.4em;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 0;
-  font-weight: 500;
-  margin-left: 0;
-}
-.perfil {
-  text-align: left;
-  margin-left: 20px;
-  font-weight: bold;
-  height: 0;
-  padding-bottom: 0;
-}
-.login {
-  text-align: right;
-  margin-left: 0;
-  height: 30px;
+  padding-top: 10px;
+  transition: 1s;
+  font-size: 1.3em;
   font-weight: bold;
 }
+
 /* CSS cabeçalho - Fim */
 /* ------------------------------------------------------------------- */
 
@@ -76,17 +74,21 @@ main {
   border-radius: 10px;
   height: 300px;
   max-width: 1000px;
-  padding: 20px;
+  padding: 0px;
 }
 .promotionlist h3 {
+  font-size: 2.3em;
+  font-weight: bold;
   text-align: center;
 }
 .promotionlist p {
+  font-size: 2em;
+  font-weight: bold;
   text-align: center;
 }
 .promotionlist {
   text-align: center;
-  background-color: white;
+  background-color: var(--cor7);
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
@@ -183,12 +185,14 @@ main {
 }
 .product .name {
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: 0px;
+  font-size: 1.7em;
 }
 .product .price {
   color: var(--cor0);
-  font-size: 1.2rem;
-  margin-top: 5px;
+  font-size: 1.3rem;
+  margin-top: 0px;
+  
 }
 /* Fim Slider */
 /* ----------- */
@@ -206,10 +210,12 @@ main {
   text-align: center;
 }
 .product-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
-  margin: 0 auto;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  min-height: 70vh;
 }
 .product-grid-item {
   display: flex;
@@ -223,9 +229,8 @@ main {
   margin: 5px 5px 20px;
 }
 .product-grid-item > img {
-  width: 100%;
-  max-height: 100%;
-  height: auto;
+  width: 150px;
+  height: 150px;
   margin-bottom: 5px;
   padding-bottom: 30px;
 }
