--- a/trabalhos/CSS/main.css
+++ b/trabalhos/CSS/main.css
@@ -9,6 +9,7 @@
   --cor6: #fffd82;
   --cor7: #386c8357; 
   --cor8: #e7eced;
+  --cor9: #16bec3;
 }
 /* Palheta de cores - Fim */
 /* ------------------------------------------------------------------------ */
@@ -20,22 +21,36 @@ background-color: var(--cor8);
 }
 
 /* CSS do cabeçalho - Início */
-.header{
-  margin: 0;
-  padding: 0 auto;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--cor7);
+  background-color: var(--cor9);
   color: var(--cor1);
   display: flex;
   flex-direction: row;
   align-items: center;
   box-shadow: 1px 1px 1px black;
-  height: 3.5em;
+  height: 3em; /* altura reduzida para 3em */
   justify-content: space-between;
   padding: 0 10%;
   padding-top: 20px;
   padding-bottom: 20px;
+  z-index: 9999;
 }
+
+.content {
+  background-color: var(--cor8);
+  text-align: center;
+  padding-top: 10px;
+  transition: 1s;
+  font-size: 1.3em;
+  font-weight: bold;
+  margin-top: 3em; /* margem superior igual a altura do header */
+}
+
 .navigation_header{
   display: flex;
   flex-direction: row;
@@ -56,6 +71,7 @@ background-color: var(--cor8);
   border-radius: 10px;
 }
 .content{
+  
   background-color: var(--cor8);
   text-align: center;
   padding-top: 10px;
@@ -214,8 +230,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0;
-  min-height: 70vh;
+  margin: 10px;
+  min-height: 70px;
 }
 .product-grid-item {
   display: flex;
