--- a/trabalhos/CSS/redf.css
+++ b/trabalhos/CSS/redf.css
@@ -1,4 +1,5 @@
-        :root {
+       /* Paleta de cores */
+       :root {
         --cor0: #2C3E50;
         --cor1: #FFF;
         --cor2: #2980B9;
